--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .container {
     font-family: arial;
-    background-color: gray;
-    color: blue;
+    background-color: rgb(115, 240, 202);
+    color: rgb(5, 84, 87);
 }
